--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="static/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
   <body>
     <header>
       <h1>Lule NorthernLights Cinema</h1>
       <h3>Din nordligaste Biograf</h3>
-      <nav>
-        <ul>
-          <li>Filmer</li>
-          <li>Salonger</li>
-          <li>Om oss</li>
-          <li>Bistro</li>
-        </ul>
-      </nav>
     </header>
+    <nav>
+      <ul>
+        <li>Filmer</li>
+        <li>Salonger</li>
+        <li>Om oss</li>
+        <li>Bistro</li>
+      </ul>
+    </nav>
+
     <main>
       <h2>Filmerna här</h2>
       <p>
@@ -84,6 +85,12 @@
 
     <footer>
       <h2>Klassisk footer i guess</h2>
+      <nav>
+        <ul>
+          <li>Kontakt</li>
+          <li>Hjälp</li>
+        </ul>
+      </nav>
     </footer>
 
     <script src="./js/script.js"></script>
