--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
           src="static/kommun-logo.svg"
           alt="municipality for our city"
         />
+        <img
+          id="cinema-collab"
+          src="static/europa-cinemas.png"
+          alt="cinema collab"
+        />
       </div>
     </footer>
 
