--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="static/main.css" />
+    <link rel="stylesheet" href="../static/main.css" />
     <title>LuleNorthernLightsCinema</title>
   </head>
   <body>
     <header class="header">
       <div class="top-header">
         <!--  Make a good looking logotype later -->
-        <a href="index.html">
+        <a href="../index.html">
           <img
             class="logotype"
-            src="static/logga.jpg"
+            src="../static/logga.jpg"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
           id="hamburger-icon"
-          src="static/hamburger-icon.svg"
+          src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
@@ -30,7 +30,7 @@
           <a href="#"><li>Öppetider & Kontakt</li></a>
           <a href="#"> <li>Om våran biograf</li></a>
           <a href="#"> <li>Biljettinfo</li></a>
-          <a href="/html/newsletter.html"> <li>Nyheter</li></a>
+          <a href="newsletter.html"> <li>Nyheter</li></a>
           <a href="#"><li>Köp presentkort</li></a>
         </ul>
       </nav>
@@ -46,7 +46,7 @@
     </nav>
 
     <main>
-      <h2>Filmerna här</h2>
+      <h2>Lule Northern Lights Cinema Nyhetsbrev</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ab
         doloremque animi, voluptate distinctio quod sunt nam hic iste voluptatem
@@ -135,11 +135,11 @@
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+          <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
         /></a>
       </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
