--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -47,6 +47,11 @@
 
     <main>
       <h2>Lule Northern Lights Cinema Nyhetsbrev</h2>
+      <p>Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter! </p>
+      <p>
+        <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
+    </p>
+      <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300" height="453">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ab
         doloremque animi, voluptate distinctio quod sunt nam hic iste voluptatem
