changed layot on page headline

--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -44,9 +44,10 @@
         <li>Bistro</li>
       </ul>
     </nav>
-
+    <section class = "pageHeader">
+        <h2>Nyhetsbrev</h2>
+    </section>
     <main class="content">
-      <h2>Lule Northern Lights Cinema Nyhetsbrev</h2>
       <p>Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter! </p>
       <p>
         <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
