--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -64,38 +64,51 @@
       </h2>
     </aside>
 
-    <footer class="header-footer">
-      <h2>Klassisk footer i guess</h2>
-      <nav>
-        <ul>
-          <li>Kontakt</li>
-          <li>Hjälp</li>
-        </ul>
-      </nav>
-      <div class="media-links">
-        <a href="#">
+    <footer class="footer">
+        <div class="footer-sections">
+          <h3>Lule Northern Lights Cinema</h3>
+          <p>biografgatan 97</p>
+          <p>97231 Luleå</p>
+        </div>
+        <div class="footer-sections">
+          <h3>Kontakta oss</h3>
+          <a href="#">
+            <img
+              class="social-media-links"
+              src="static/facebook.svg"
+              alt="facebook icon"
+          /></a>
+          <a href="#">
+            <img
+              class="social-media-links"
+              src="static/instagram.svg"
+              alt="instagram icon"
+          /></a>
+          <a href="#">
+            <img
+              class="social-media-links"
+              src="static/twitter.svg"
+              alt="twitter icon"
+          /></a>
+          <a href="mailto:">
+            <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+          /></a>
+          <p>Telefon: 010-7308579</p>
+        </div>
+        <div class="footer-sections">
+          <h3>Samarbete med</h3>
           <img
-            class="social-media-links"
-            src="static/facebook.svg"
-            alt="facebook icon"
-        /></a>
-        <a href="#">
+            id="municipality-logo"
+            src="static/kommun-logo.svg"
+            alt="municipality for our city"
+          />
           <img
-            class="social-media-links"
-            src="static/instagram.svg"
-            alt="instagram icon"
-        /></a>
-        <a href="#">
-          <img
-            class="social-media-links"
-            src="static/twitter.svg"
-            alt="twitter icon"
-        /></a>
-        <a href="mailto:">
-          <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
-        /></a>
-      </div>
-    </footer>
+            id="cinema-collab"
+            src="static/europa-cinemas.png"
+            alt="cinema collab"
+          />
+        </div>
+      </footer>
 
     <script src="../js/script.js"></script>
   </body>
