--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
           src="static/hamburger-icon.svg"
           alt="hamburger-icon"
