connected main-nav to hamburger icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="#"><li>Öppetider & Kontakt</li></a>
           <a href="#"> <li>Om våran biograf</li></a>
           <a href="#"> <li>Biljettinfo</li></a>
