--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -26,7 +26,7 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="#"><li>Öppetider & Kontakt</li></a>
           <a href="#"> <li>Om våran biograf</li></a>
           <a href="#"> <li>Biljettinfo</li></a>
@@ -44,18 +44,25 @@
         <li>Bistro</li>
       </ul>
     </nav>
-    <section class = "pageHeader">
-        <h2>Nyhetsbrev</h2>
+    <section class="pageHeader">
+      <h2>Nyhetsbrev</h2>
     </section>
     <main class="content">
-      <p>Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter! </p>
+      <p>
+        Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar
+        och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat
+        med filmnyheter!
+      </p>
       <p>
         <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
       </p>
-      <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300" height="453">
-      <p>
-        Exemplet är från vecka 40.
-      </p>
+      <img
+        src="../static/newsletter.png"
+        alt="Exempel nyhetsbrev"
+        width="300"
+        height="453"
+      />
+      <p>Exemplet är från vecka 40.</p>
     </main>
     <aside>
       <h2>
@@ -65,50 +72,50 @@
     </aside>
 
     <footer class="footer">
-        <div class="footer-sections">
-          <h3>Lule Northern Lights Cinema</h3>
-          <p>biografgatan 97</p>
-          <p>97231 Luleå</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Kontakta oss</h3>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="static/facebook.svg"
-              alt="facebook icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="static/instagram.svg"
-              alt="instagram icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="static/twitter.svg"
-              alt="twitter icon"
-          /></a>
-          <a href="mailto:">
-            <img class="social-media-links" src="static/mail.svg" alt="mail icon"
-          /></a>
-          <p>Telefon: 010-7308579</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Samarbete med</h3>
+      <div class="footer-sections">
+        <h3>Lule Northern Lights Cinema</h3>
+        <p>biografgatan 97</p>
+        <p>97231 Luleå</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Kontakta oss</h3>
+        <a href="#">
           <img
-            id="municipality-logo"
-            src="static/kommun-logo.svg"
-            alt="municipality for our city"
-          />
+            class="social-media-links"
+            src="static/facebook.svg"
+            alt="facebook icon"
+        /></a>
+        <a href="#">
           <img
-            id="cinema-collab"
-            src="static/europa-cinemas.png"
-            alt="cinema collab"
-          />
-        </div>
-      </footer>
+            class="social-media-links"
+            src="static/instagram.svg"
+            alt="instagram icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="static/twitter.svg"
+            alt="twitter icon"
+        /></a>
+        <a href="mailto:">
+          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+        /></a>
+        <p>Telefon: 010-7308579</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Samarbete med</h3>
+        <img
+          id="municipality-logo"
+          src="static/kommun-logo.svg"
+          alt="municipality for our city"
+        />
+        <img
+          id="cinema-collab"
+          src="static/europa-cinemas.png"
+          alt="cinema collab"
+        />
+      </div>
+    </footer>
 
     <script src="../js/script.js"></script>
   </body>
