changed so img and svg works on our html files

--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -19,8 +19,9 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
+          src="/static/hamburger-icon.svg"
           alt="hamburger-icon"
         />
       </div>
@@ -82,23 +83,26 @@
         <a href="#">
           <img
             class="social-media-links"
-            src="static/facebook.svg"
+            src="/static/facebook.svg"
             alt="facebook icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="static/instagram.svg"
+            src="/static/instagram.svg"
             alt="instagram icon"
         /></a>
         <a href="#">
           <img
             class="social-media-links"
-            src="static/twitter.svg"
+            src="/static/twitter.svg"
             alt="twitter icon"
         /></a>
         <a href="mailto:">
-          <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+          <img
+            class="social-media-links"
+            src="/static/mail.svg"
+            alt="mail icon"
         /></a>
         <p>Telefon: 010-7308579</p>
       </div>
@@ -106,12 +110,12 @@
         <h3>Samarbete med</h3>
         <img
           id="municipality-logo"
-          src="static/kommun-logo.svg"
+          src="/static/kommun-logo.svg"
           alt="municipality for our city"
         />
         <img
           id="cinema-collab"
-          src="static/europa-cinemas.png"
+          src="/static/europa-cinemas.png"
           alt="cinema collab"
         />
       </div>
