Add html and content

--- a/html/bistro-menu.html
+++ b/html/bistro-menu.html
@@ -45,15 +45,57 @@
       </ul>
     </nav>
 
-    <main>      
-    </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
+    <main>
+        <section>
+            <h2>Välkommen till Northen Lights Bistro & Bar</h2>
+            <p>
+                Hos oss kan du njuta av ett modernt och rustikt nordiskt kök.
+                Menyn kombineras med dryckesförslag av vår sommelier Sten Bumling 
+                och kan avnjutas såväl i vår stora foajé som i någon av våra tre 
+                biosalonger.
+            </p>
+            
+            <a href="mailto:">
+                Boka Bord
+            </a>
+        </section>
+        <section>
+            <h2>A la carte meny</h2>
+            <em>
+                Vi serverar vår à la carte meny från klockan 
+                16.30 i bistron, salong Bar Deco och Camera.
+            </em>
+            <ul>
+                <li>Rätt 1</li>
+                <li>Rätt 2</li>
+                <li>Rätt 3</li>
+                <li>Rätt 4</li>
+                <li>Rätt 5</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Kökets special</h2>
+            <p>
+                Vecka 50-51: Lättrökt svensk ostronskivling med 
+                julkryddade gulbetor och stuvad grönkål.
+            </p>
+        </section>
+        <section>
+            <h2>Bistromeny</h2>
+            <em>
+                Vi erbjuder vår bistromeny hela dagen i alla våra tre salonger.
+            </em>
+            <ul>
+                <li>Rätt 1</li>
+                <li>Rätt 2</li>
+                <li>Rätt 3</li>
+                <li>Rätt 4</li>
+                <li>Rätt 5</li>
+            </ul>
+        </section>
 
+    </main>
+    
     <footer class="footer">
       <div class="footer-sections">
         <h3>Lule Northern Lights Cinema</h3>
