Add classes for styling

--- a/html/bistro-menu.html
+++ b/html/bistro-menu.html
@@ -46,7 +46,7 @@
     </nav>
 
     <main>
-        <section>
+        <section class="fnb fnb-food-header">
             <h2>Välkommen till Northen Lights Bistro & Bar</h2>
             <p>
                 Hos oss kan du njuta av ett modernt och rustikt nordiskt kök.
@@ -59,7 +59,7 @@
                 Boka Bord
             </a>
         </section>
-        <section>
+        <section class="fnb fnb-food-alacarte">
             <h2>A la carte meny</h2>
             <em>
                 Vi serverar vår à la carte meny från klockan 
@@ -73,14 +73,14 @@
                 <li>Rätt 5</li>
             </ul>
         </section>
-        <section>
+        <section class="fnb fnb-food-special">
             <h2>Kökets special</h2>
             <p>
                 Vecka 50-51: Lättrökt svensk ostronskivling med 
                 julkryddade gulbetor och stuvad grönkål.
             </p>
         </section>
-        <section>
+        <section class="fnb fnb-food-bistro">
             <h2>Bistromeny</h2>
             <em>
                 Vi erbjuder vår bistromeny hela dagen i alla våra tre salonger.
