beginnign of creating cards

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         />
       </div>
     </footer>
-
+    <script type="text/javascript" src="/src/movies.json"></script>
+    ;
     <script src="./js/script.js"></script>
   </body>
 </html>
