styling okey but not fully responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </ul>
     </nav>
 
-    <ul class="class"></ul>
+    <div class="picture-container"></div>
 
     <main>
       <h2>Filmerna här</h2>
