fix links on index, giftcard and newsletter pages

--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -31,7 +31,7 @@
           <a href="#"> <li>Om våran biograf</li></a>
           <a href="#"> <li>Biljettinfo</li></a>
           <a href="newsletter.html"> <li>Nyheter</li></a>
-          <a href="#"><li>Köp presentkort</li></a>
+          <a href="giftCard.html"><li>Köp presentkort</li></a>
         </ul>
       </nav>
     </header>
@@ -75,23 +75,23 @@
           <a href="#">
             <img
               class="social-media-links"
-              src="static/facebook.svg"
+              src="../static/facebook.svg"
               alt="facebook icon"
           /></a>
           <a href="#">
             <img
               class="social-media-links"
-              src="static/instagram.svg"
+              src="../static/instagram.svg"
               alt="instagram icon"
           /></a>
           <a href="#">
             <img
               class="social-media-links"
-              src="static/twitter.svg"
+              src="../static/twitter.svg"
               alt="twitter icon"
           /></a>
           <a href="mailto:">
-            <img class="social-media-links" src="static/mail.svg" alt="mail icon"
+            <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
           /></a>
           <p>Telefon: 010-7308579</p>
         </div>
@@ -99,12 +99,12 @@
           <h3>Samarbete med</h3>
           <img
             id="municipality-logo"
-            src="static/kommun-logo.svg"
+            src="../static/kommun-logo.svg"
             alt="municipality for our city"
           />
           <img
             id="cinema-collab"
-            src="static/europa-cinemas.png"
+            src="../static/europa-cinemas.png"
             alt="cinema collab"
           />
         </div>
