--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="#"> <li>Om våran biograf</li></a>
           <a href="#"> <li>Biljettinfo</li></a>
           <a href="/html/newsletter.html"> <li>Nyheter</li></a>
-          <a href="#"><li>Köp presentkort</li></a>
+          <a href="/html/giftCard.html"><li>Köp presentkort</li></a>
         </ul>
       </nav>
     </header>
