added link to ticketinfo page

--- a/html/giftCard.html
+++ b/html/giftCard.html
@@ -29,7 +29,7 @@
         <ul>
           <a href="#"><li>Öppetider & Kontakt</li></a>
           <a href="#"> <li>Om våran biograf</li></a>
-          <a href="#"> <li>Biljettinfo</li></a>
+          <a href="ticket-info.html"> <li>Biljettinfo</li></a>
           <a href="newsletter.html"> <li>Nyheter</li></a>
           <a href="giftCard.html"><li>Köp presentkort</li></a>
         </ul>
