Fix links to done pages

--- a/Html/ticket-info.html
+++ b/Html/ticket-info.html
@@ -29,9 +29,9 @@
         <ul>
           <a href="#"><li>Öppetider & Kontakt</li></a>
           <a href="#"> <li>Om våran biograf</li></a>
-          <a href="#"> <li>Biljettinfo</li></a>
-          <a href="#"> <li>Nyheter</li></a>
-          <a href="#"><li>Köp presentkort</li></a>
+          <a href="ticket-info.html"> <li>Biljettinfo</li></a>
+          <a href="newsletter.html"> <li>Nyheter</li></a>
+          <a href="giftCard.html"><li>Köp presentkort</li></a>
         </ul>
       </nav>
     </header>
