Set classes to secNav (parent and children)

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       </nav>
     </header>
 
-    <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
+    <nav class="secNav">
+      <menu class="secNav-menu">
+        <li class="secNav-menu-item">Filmer</li>
+        <li class="secNav-menu-item">Salonger</li>
+        <li class="secNav-menu-item">Om oss</li>
+        <li class="secNav-menu-item">Bistro</li>
       </ul>
-    </nav>
+    </menu>
 
     <main>
       <h2>Filmerna här</h2>
