--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <li class="secNav-menu-item">Salonger</li>
         <li class="secNav-menu-item">Om oss</li>
         <li class="secNav-menu-item">Bistro</li>
-      </ul>
-    </menu>
+      </menu>
+    </nav>
 
     <main>
       <h2>Filmerna här</h2>
