--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <li>Bistro</li>
       </ul>
     </nav>
-
+    <div class="hej"></div>
+    <div class="hej"></div>
     <div class="picture-container"></div>
 
     <main>
