Css & Html done for buttons

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
     <nav class="secNav">
       <menu class="secNav-menu">
-        <li class="secNav-menu-item">Filmer</li>
-        <li class="secNav-menu-item">Salonger</li>
-        <li class="secNav-menu-item">Om oss</li>
-        <li class="secNav-menu-item">Bistro</li>
+        <li class="secNav-menu-item"><button>Repertoar</button></li>
+        <li class="secNav-menu-item"><button>Salonger</button></li>
+        <li class="secNav-menu-item"><button>Specialvisningar</button></li>
+        <li class="secNav-menu-item"><button>Live på bio</button></li>
+        <li class="secNav-menu-item"><button>Bar & Bistro</button></li>
       </menu>
     </nav>
 
