--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
     <nav class="secNav">
       <menu class="secNav-menu">
-        <li class="secNav-menu-item"><button>Repertoar</button></li>
+        <li class="secNav-menu-item">
+          <button onclick="myFunction()" class="dropBtn">Repertoar</button>
+          <div class="secNav-dropdown"></div>
+        </li>
         <li class="secNav-menu-item"><button>Salonger</button></li>
         <li class="secNav-menu-item"><button>Specialvisningar</button></li>
         <li class="secNav-menu-item"><button>Live på bio</button></li>
@@ -155,5 +158,11 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="./js/secNav/secNav.js" type="module"></script>
+    <script>
+      function myFunction() {
+        document.getElementById;
+      }
+    </script>
   </body>
 </html>
