--- a/html/giftCard.html
+++ b/html/giftCard.html
@@ -1,64 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/main.css" />
     <title>LuleNorthernLightsCinema</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="top-header">
-        <!--  Make a good looking logotype later -->
-        <a href="../index.html">
-          <img
-            class="logotype"
-            src="../static/logga.jpg"
-            alt="logotype for the cinema"
-        /></a>
-        <h1>Lule Northern Lights Cinema</h1>
-        <img
-          id="hamburger-icon"
-          src="../static/hamburger-icon.svg"
-          alt="hamburger-icon"
-        />
-      </div>
+</head>
 
-      <nav>
-        <ul>
-          <a href="#"><li>Öppetider & Kontakt</li></a>
-          <a href="#"> <li>Om våran biograf</li></a>
-          <a href="ticket-info.html"> <li>Biljettinfo</li></a>
-          <a href="newsletter.html"> <li>Nyheter</li></a>
-          <a href="giftCard.html"><li>Köp presentkort</li></a>
-        </ul>
-      </nav>
+<body>
+    <header class="header">
+        <div class="top-header">
+            <!--  Make a good looking logotype later -->
+            <a href="../index.html">
+                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
+            <h1>Lule Northern Lights Cinema</h1>
+            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
+        </div>
+
+        <nav>
+            <ul>
+                <a href="openingHours.html">
+                    <li>Öppetider & Kontakt</li>
+                </a>
+                <a href="about.html">
+                    <li>Om våran biograf</li>
+                </a>
+                <a href="ticket-info.html">
+                    <li>Biljettinfo</li>
+                </a>
+                <a href="newsletter.html">
+                    <li>Nyheter</li>
+                </a>
+                <a href="giftCard.html">
+                    <li>Köp presentkort</li>
+                </a>
+            </ul>
+        </nav>
     </header>
 
     <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
-      </ul>
+        <ul>
+            <li>Filmer</li>
+            <li>Salonger</li>
+            <li>Om oss</li>
+            <li>Bistro</li>
+        </ul>
     </nav>
-    <section class = "pageHeader">
+    <section class="pageHeader">
         <h2>Presentkort</h2>
     </section>
     <main class="content">
-      <p>En fin gåva till alla filmälskare som vill sätta guldkant på biobesöket. Presentkortet gäller hela bioprogrammet samt mat och dryck. Du väljer beloppet och kortet är därefter giltigt i ett år. 
+        <p>
+            En fin gåva till alla filmälskare som vill sätta guldkant på biobesöket. Presentkortet gäller hela bioprogrammet samt mat och dryck. Du väljer beloppet och kortet är därefter giltigt i ett år. Läs hur du betalar med presentkortet på hemsidan under
+            <a href="ticket-info.html">Biljettinfo</a>.
+        </p>
+        <h3>Köp presentkort på plats</h3>
+        <p>
+            Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan köpa vårt presentkort i kassan. Läs mer om våra
+            <a href="#">öppettider</a>.
+        </p>
 
-        Läs hur du betalar med presentkortet på hemsidan under <a href="ticket-info.html">Biljettinfo</a>.</p>
-      <h3>Köp presentkort på plats</h3>
-      <p>Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan köpa vårt presentkort i kassan. Läs mer om våra <a href="#">öppettider</a>.</p>
-
-      <h3>Köp presentkort via företaget</h3>
-      <p>Vill du köpa presentkort via företaget kan du mejla din beställning till <a href="mailto:info@lulenorthernlightscinema.se">info@lulenorthernlightscinema.se</a>. Glöm inte att bifoga företagets fakturauppgifter i mejlet. </p>
+        <h3>Köp presentkort via företaget</h3>
+        <p>
+            Vill du köpa presentkort via företaget kan du mejla din beställning till
+            <a href="mailto:info@lulenorthernlightscinema.se">info@lulenorthernlightscinema.se</a
+        >. Glöm inte att bifoga företagets fakturauppgifter i mejlet.
+      </p>
       <p>
-        <img src="../static/giftcard.png" alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
-        width="300" height="300">
+        <img
+          src="../static/giftcard.png"
+          alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
+          width="300"
+          height="300"
+        />
       </p>
     </main>
     <aside>
@@ -69,51 +85,35 @@
     </aside>
 
     <footer class="footer">
-        <div class="footer-sections">
-          <h3>Lule Northern Lights Cinema</h3>
-          <p>biografgatan 97</p>
-          <p>97231 Luleå</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Kontakta oss</h3>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/facebook.svg"
-              alt="facebook icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/instagram.svg"
-              alt="instagram icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/twitter.svg"
-              alt="twitter icon"
-          /></a>
-          <a href="mailto:">
-            <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
-          /></a>
-          <p>Telefon: 010-7308579</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Samarbete med</h3>
+      <div class="footer-sections">
+        <h3>Lule Northern Lights Cinema</h3>
+        <p>biografgatan 97</p>
+        <p>97231 Luleå</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Kontakta oss</h3>
+        <a href="#">
           <img
-            id="municipality-logo"
-            src="../static/kommun-logo.svg"
-            alt="municipality for our city"
-          />
-          <img
-            id="cinema-collab"
-            src="../static/europa-cinemas.png"
-            alt="cinema collab"
-          />
-        </div>
-      </footer>
+            class="social-media-links"
+            src="../static/facebook.svg"
+            alt="facebook icon"
+        /></a>
+            <a href="#">
+                <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
+            <a href="#">
+                <img class="social-media-links" src="../static/twitter.svg" alt="twitter icon" /></a>
+            <a href="mailto:">
+                <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
+            <p>Telefon: 010-7308579</p>
+            </div>
+            <div class="footer-sections">
+                <h3>Samarbete med</h3>
+                <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
+                <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
+            </div>
+            </footer>
 
-    <script src="../js/script.js"></script>
-  </body>
+            <script src="../js/script.js"></script>
+</body>
+
 </html>
