Added js file and screen

--- a/Html/booking.html
+++ b/Html/booking.html
@@ -48,9 +48,17 @@
         <h2>Boka din plats</h2>
     </section>
     <main class="content">
-      <p>
+      <div class="screen">Bioduk  
+      </div>
+      <div id="seatPlanContainer" class="seatPlanContainer" style="height: 375px;"> 
+        <div id="seatPlanScroller" class="seatPlanScroller" style="height: 375px;"> 
+          <canvas id="seatPlanCanvas" class="seatPlanCanvas" width="750" height="375" tabindex="999" style="height: 375px; width: 750px;">
+          
+          </canvas> 
+        </div>
+      </div>
         
-      </p>
+      </div>
     </main>
     <aside>
       <h2>
@@ -105,6 +113,6 @@
         </div>
       </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/booking/booking.js"></script>
   </body>
 </html>
