Much better solution than draw on canvas

--- a/Html/booking.html
+++ b/Html/booking.html
@@ -50,12 +50,10 @@
     <main class="content">
       <div class="screen">Bioduk  
       </div>
-      <div id="seatPlanContainer" class="seatPlanContainer" style="height: 750px;"> 
-        <div id="seatPlanScroller" class="seatPlanScroller" style="height: 750px;"> 
-          <canvas id="seatPlanCanvas" class="seatPlanCanvas" width="750" height="750" tabindex="999" style="height: 750px; width: 750px;">
+      <div id="seatPlanContainer" class="seatPlanContainer"> 
+          <div id="seatPlanCanvas" class="seatPlanCanvas">
           
-          </canvas> 
-        </div>
+          </div> 
       </div>
         
       </div>
