--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -28,7 +28,7 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
