--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
       <nav>
         <ul class="main-nav">
-          <a href="#"><li>Öppetider & Kontakt</li></a>
-          <a href="#"> <li>Om våran biograf</li></a>
-          <a href="#"> <li>Biljettinfo</li></a>
+          <a href="html/openingHours.html"><li>Öppetider & Kontakt</li></a>
+          <a href="/html/about.html"> <li>Om våran biograf</li></a>
+          <a href="/html/ticket-info.html"> <li>Biljettinfo</li></a>
           <a href="/html/newsletter.html"> <li>Nyheter</li></a>
-          <a href="#"><li>Köp presentkort</li></a>
+          <a href="/html/ticket-info.html"><li>Köp presentkort</li></a>
         </ul>
       </nav>
     </header>
