--- a/Html/booking.html
+++ b/Html/booking.html
@@ -10,11 +10,10 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <!--  Make a good looking logotype later -->
         <a href="../index.html">
           <img
             class="logotype"
-            src="../static/logga.jpg"
+            src="/static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
@@ -44,18 +43,13 @@
         <li>Bistro</li>
       </ul>
     </nav>
-    <section class = "pageHeader">
-        <h2>Boka din plats</h2>
+    <section class="pageHeader">
+      <h2>Boka din plats</h2>
     </section>
     <main class="content">
-      <div class="screen">Bioduk  
-      </div>
-      <div id="seatPlanContainer" class="seatPlanContainer"> 
-          <div id="seatPlanCanvas" class="seatPlanCanvas">
-          
-          </div> 
-      </div>
-        
+      <div class="screen">Bioduk</div>
+      <div id="seatPlanContainer" class="seatPlanContainer">
+        <div id="seatPlanCanvas" class="seatPlanCanvas"></div>
       </div>
     </main>
     <aside>
@@ -66,50 +60,53 @@
     </aside>
 
     <footer class="footer">
-        <div class="footer-sections">
-          <h3>Lule Northern Lights Cinema</h3>
-          <p>biografgatan 97</p>
-          <p>97231 Luleå</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Kontakta oss</h3>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/facebook.svg"
-              alt="facebook icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/instagram.svg"
-              alt="instagram icon"
-          /></a>
-          <a href="#">
-            <img
-              class="social-media-links"
-              src="../static/twitter.svg"
-              alt="twitter icon"
-          /></a>
-          <a href="mailto:">
-            <img class="social-media-links" src="../static/mail.svg" alt="mail icon"
-          /></a>
-          <p>Telefon: 010-7308579</p>
-        </div>
-        <div class="footer-sections">
-          <h3>Samarbete med</h3>
+      <div class="footer-sections">
+        <h3>Lule Northern Lights Cinema</h3>
+        <p>biografgatan 97</p>
+        <p>97231 Luleå</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Kontakta oss</h3>
+        <a href="#">
           <img
-            id="municipality-logo"
-            src="../static/kommun-logo.svg"
-            alt="municipality for our city"
-          />
+            class="social-media-links"
+            src="../static/facebook.svg"
+            alt="facebook icon"
+        /></a>
+        <a href="#">
           <img
-            id="cinema-collab"
-            src="../static/europa-cinemas.png"
-            alt="cinema collab"
-          />
-        </div>
-      </footer>
+            class="social-media-links"
+            src="../static/instagram.svg"
+            alt="instagram icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="../static/twitter.svg"
+            alt="twitter icon"
+        /></a>
+        <a href="mailto:">
+          <img
+            class="social-media-links"
+            src="../static/mail.svg"
+            alt="mail icon"
+        /></a>
+        <p>Telefon: 010-7308579</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Samarbete med</h3>
+        <img
+          id="municipality-logo"
+          src="../static/kommun-logo.svg"
+          alt="municipality for our city"
+        />
+        <img
+          id="cinema-collab"
+          src="../static/europa-cinemas.png"
+          alt="cinema collab"
+        />
+      </div>
+    </footer>
 
     <script src="../js/booking/booking.js"></script>
   </body>
