--- a/Html/about.html
+++ b/Html/about.html
@@ -15,9 +15,11 @@
         <div class="top-header">
             <!--  Make a good looking logotype later -->
             <a href="../index.html">
-                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
+                <img class="logotype" src="../static/logga.jpg"
+                    alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
-            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
+            <img id="hamburger-icon" src="../static/hamburger-icon.svg"
+                alt="hamburger-icon" />
         </div>
 
         <nav>
@@ -40,6 +42,39 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Lägg in href-länkar för secNav i följande .js-fil:
+         js/secNav/anchors.js
+    -->
+    <nav class="secNav">
+        <menu class="secNav-menu">
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="rep">Repertoar</button>
+                <div class="secNav-dropdown" id="rep-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="sal">Salonger</button>
+                <div class="secNav-dropdown" id="sal-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="spec">Specialvisningar</button>
+                <div class="secNav-dropdown" id="spec-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="live">Live på bio</button>
+                <div class="secNav-dropdown" id="live-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="barBist">Bar & Bistro</button>
+                <div class="secNav-dropdown" id="barBist-dropdown"></div>
+            </li>
+        </menu>
+    </nav>
+    <script src="../js/secNav/secNav.js" type="module"></script>
 </body>
 
 </html>
