--- a/html/giftCard.html
+++ b/html/giftCard.html
@@ -14,9 +14,11 @@
         <div class="top-header">
             <!--  Make a good looking logotype later -->
             <a href="../index.html">
-                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
+                <img class="logotype" src="../static/logga.jpg"
+                    alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
-            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
+            <img id="hamburger-icon" src="../static/hamburger-icon.svg"
+                alt="hamburger-icon" />
         </div>
 
         <nav>
@@ -40,80 +42,110 @@
         </nav>
     </header>
 
-    <nav>
-        <ul>
-            <li>Filmer</li>
-            <li>Salonger</li>
-            <li>Om oss</li>
-            <li>Bistro</li>
-        </ul>
+    <!-- Lägg in href-länkar för secNav i följande .js-fil:
+         js/secNav/anchors.js
+    -->
+    <nav class="secNav">
+        <menu class="secNav-menu">
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="rep">Repertoar</button>
+                <div class="secNav-dropdown" id="rep-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="sal">Salonger</button>
+                <div class="secNav-dropdown" id="sal-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="spec">Specialvisningar</button>
+                <div class="secNav-dropdown" id="spec-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="live">Live på bio</button>
+                <div class="secNav-dropdown" id="live-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="barBist">Bar & Bistro</button>
+                <div class="secNav-dropdown" id="barBist-dropdown"></div>
+            </li>
+        </menu>
     </nav>
+
     <section class="pageHeader">
         <h2>Presentkort</h2>
     </section>
     <main class="content">
         <p>
-            En fin gåva till alla filmälskare som vill sätta guldkant på biobesöket. Presentkortet gäller hela bioprogrammet samt mat och dryck. Du väljer beloppet och kortet är därefter giltigt i ett år. Läs hur du betalar med presentkortet på hemsidan under
+            En fin gåva till alla filmälskare som vill sätta guldkant på
+            biobesöket. Presentkortet gäller hela bioprogrammet samt mat och
+            dryck. Du väljer beloppet och kortet är därefter giltigt i ett år.
+            Läs hur du betalar med presentkortet på hemsidan under
             <a href="ticket-info.html">Biljettinfo</a>.
         </p>
         <h3>Köp presentkort på plats</h3>
         <p>
-            Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du kan köpa vårt presentkort i kassan. Läs mer om våra
+            Lule Northern Lights Cinema ligger på biografgatan 97 i Luleå där du
+            kan köpa vårt presentkort i kassan. Läs mer om våra
             <a href="#">öppettider</a>.
         </p>
 
         <h3>Köp presentkort via företaget</h3>
         <p>
-            Vill du köpa presentkort via företaget kan du mejla din beställning till
-            <a href="mailto:info@lulenorthernlightscinema.se">info@lulenorthernlightscinema.se</a
-        >. Glöm inte att bifoga företagets fakturauppgifter i mejlet.
-      </p>
-      <p>
-        <img
-          src="../static/giftcard.png"
-          alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
-          width="300"
-          height="300"
-        />
-      </p>
+            Vill du köpa presentkort via företaget kan du mejla din beställning
+            till
+            <a
+                href="mailto:info@lulenorthernlightscinema.se">info@lulenorthernlightscinema.se</a>.
+            Glöm inte att bifoga företagets fakturauppgifter i mejlet.
+        </p>
+        <p>
+            <img src="../static/giftcard.png"
+                alt="Bild på en biosalong med röda stolar i bakgrunden och i förgrunden är det ett glas vin, en stor bulle och ett presentkort ovanpå ett bord. Belysnigen i rummet är dämpad."
+                width="300" height="300" />
+        </p>
     </main>
     <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
+        <h2>
+            Möjligen att vi lägger någon typ info om något kul eller nåt i aside
+            som
+            på insperations biografen
+        </h2>
     </aside>
 
     <footer class="footer">
-      <div class="footer-sections">
-        <h3>Lule Northern Lights Cinema</h3>
-        <p>biografgatan 97</p>
-        <p>97231 Luleå</p>
-      </div>
-      <div class="footer-sections">
-        <h3>Kontakta oss</h3>
-        <a href="#">
-          <img
-            class="social-media-links"
-            src="../static/facebook.svg"
-            alt="facebook icon"
-        /></a>
+        <div class="footer-sections">
+            <h3>Lule Northern Lights Cinema</h3>
+            <p>biografgatan 97</p>
+            <p>97231 Luleå</p>
+        </div>
+        <div class="footer-sections">
+            <h3>Kontakta oss</h3>
             <a href="#">
-                <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
+                <img class="social-media-links" src="../static/facebook.svg"
+                    alt="facebook icon" /></a>
             <a href="#">
-                <img class="social-media-links" src="../static/twitter.svg" alt="twitter icon" /></a>
+                <img class="social-media-links" src="../static/instagram.svg"
+                    alt="instagram icon" /></a>
+            <a href="#">
+                <img class="social-media-links" src="../static/twitter.svg"
+                    alt="twitter icon" /></a>
             <a href="mailto:">
-                <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
+                <img class="social-media-links" src="../static/mail.svg"
+                    alt="mail icon" /></a>
             <p>Telefon: 010-7308579</p>
-            </div>
-            <div class="footer-sections">
-                <h3>Samarbete med</h3>
-                <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
-                <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
-            </div>
-            </footer>
+        </div>
+        <div class="footer-sections">
+            <h3>Samarbete med</h3>
+            <img id="municipality-logo" src="../static/kommun-logo.svg"
+                alt="municipality for our city" />
+            <img id="cinema-collab" src="../static/europa-cinemas.png"
+                alt="cinema collab" />
+        </div>
+    </footer>
 
-            <script src="../js/script.js"></script>
+    <script src="../js/secNav/secNav.js" type="module"></script>
 </body>
 
 </html>
