--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -14,9 +14,11 @@
         <div class="top-header">
             <!--  Make a good looking logotype later -->
             <a href="../index.html">
-                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
+                <img class="logotype" src="../static/logga.jpg"
+                    alt="logotype for the cinema" /></a>
             <h1>Lule Northern Lights Cinema</h1>
-            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
+            <img id="hamburger-icon" src="../static/hamburger-icon.svg"
+                alt="hamburger-icon" />
         </div>
 
         <nav>
@@ -40,30 +42,57 @@
         </nav>
     </header>
 
-    <nav>
-        <ul>
-            <li>Filmer</li>
-            <li>Salonger</li>
-            <li>Om oss</li>
-            <li>Bistro</li>
-        </ul>
+    <!-- Lägg in href-länkar för secNav i följande .js-fil:
+         js/secNav/anchors.js
+    -->
+    <nav class="secNav">
+        <menu class="secNav-menu">
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="rep">Repertoar</button>
+                <div class="secNav-dropdown" id="rep-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="sal">Salonger</button>
+                <div class="secNav-dropdown" id="sal-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="spec">Specialvisningar</button>
+                <div class="secNav-dropdown" id="spec-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="live">Live på bio</button>
+                <div class="secNav-dropdown" id="live-dropdown"></div>
+            </li>
+
+            <li class="secNav-menu-item">
+                <button class="dropBtn" id="barBist">Bar & Bistro</button>
+                <div class="secNav-dropdown" id="barBist-dropdown"></div>
+            </li>
+        </menu>
     </nav>
     <section class="pageHeader">
         <h2>Nyhetsbrev</h2>
     </section>
     <main class="content">
         <p>
-            Vill du ha koll på vad som händer hos oss, premiärer, specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett nyhetsprev späckat med filmnyheter!
+            Vill du ha koll på vad som händer hos oss, premiärer,
+            specialvisningar och biljettsläpp. Varannan vecka skickar vi ut ett
+            nyhetsprev späckat med filmnyheter!
         </p>
         <p>
             <a href="#">Självklart vill jag prenumerera på nyhetsbrevet!!</a>
         </p>
-        <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300" height="453" />
+        <img src="../static/newsletter.png" alt="Exempel nyhetsbrev" width="300"
+            height="453" />
         <p>Exemplet är från vecka 40.</p>
     </main>
     <aside>
         <h2>
-            Möjligen att vi lägger någon typ info om något kul eller nåt i aside som på insperations biografen
+            Möjligen att vi lägger någon typ info om något kul eller nåt i aside
+            som på insperations biografen
         </h2>
     </aside>
 
@@ -76,23 +105,29 @@
         <div class="footer-sections">
             <h3>Kontakta oss</h3>
             <a href="#">
-                <img class="social-media-links" src="../static/facebook.svg" alt="facebook icon" /></a>
+                <img class="social-media-links" src="../static/facebook.svg"
+                    alt="facebook icon" /></a>
             <a href="#">
-                <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
+                <img class="social-media-links" src="../static/instagram.svg"
+                    alt="instagram icon" /></a>
             <a href="#">
-                <img class="social-media-links" src="../static/twitter.svg" alt="twitter icon" /></a>
+                <img class="social-media-links" src="../static/twitter.svg"
+                    alt="twitter icon" /></a>
             <a href="mailto:">
-                <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
+                <img class="social-media-links" src="../static/mail.svg"
+                    alt="mail icon" /></a>
             <p>Telefon: 010-7308579</p>
         </div>
         <div class="footer-sections">
             <h3>Samarbete med</h3>
-            <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
-            <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
+            <img id="municipality-logo" src="../static/kommun-logo.svg"
+                alt="municipality for our city" />
+            <img id="cinema-collab" src="../static/europa-cinemas.png"
+                alt="cinema collab" />
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/secNav/secNav.js" type="module"></script>
 </body>
 
 </html>
