index.html main header links updated

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <nav>
             <ul>
-                <a href="#">
+                <a href="/Html/openingHours.html">
                     <li>Öppetider & Kontakt</li>
                 </a>
-                <a href="#">
+                <a href="/Html/about.html">
                     <li>Om våran biograf</li>
                 </a>
                 <a href="/html/ticket-info.html">
