--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
           src="static/hamburger-icon.svg"
           alt="hamburger-icon"
@@ -27,7 +28,7 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="#">
             <li>Öppetider & Kontakt</li>
           </a>
