so tags and functions works on all html files

--- a/Html/booking.html
+++ b/Html/booking.html
@@ -18,6 +18,7 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
           src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
@@ -26,8 +27,8 @@
 
       <nav>
         <ul>
-          <a href="#"><li>Öppetider & Kontakt</li></a>
-          <a href="#"> <li>Om våran biograf</li></a>
+          <a href="/html/openingHours.html"><li>Öppetider & Kontakt</li></a>
+          <a href="/html/about.html"> <li>Om våran biograf</li></a>
           <a href="ticket-info.html"> <li>Biljettinfo</li></a>
           <a href="newsletter.html"> <li>Nyheter</li></a>
           <a href="giftCard.html"><li>Köp presentkort</li></a>
@@ -109,5 +110,6 @@
     </footer>
 
     <script src="../js/booking/booking.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
