--- a/Html/ticket-info.html
+++ b/Html/ticket-info.html
@@ -19,6 +19,7 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
           src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
@@ -42,18 +43,35 @@
           <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
+          <section>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/facebook.svg"
+                alt="facebook icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/instagram.svg"
+                alt="instagram icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/twitter.svg"
+                alt="twitter icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/mail.svg"
+                alt="mail icon"
+            /></a>
+          </section>
         </ul>
       </nav>
     </header>
-
-    <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
-      </ul>
-    </nav>
 
     <main>
       <section name="frequently-asked">
@@ -191,6 +209,6 @@
       </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
