--- a/html/giftCard.html
+++ b/html/giftCard.html
@@ -19,6 +19,7 @@
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
         <img
+          onclick="hamburger()"
           id="hamburger-icon"
           src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
@@ -42,18 +43,36 @@
           <a href="giftCard.html">
             <li>Köp presentkort</li>
           </a>
+          <section>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/facebook.svg"
+                alt="facebook icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/instagram.svg"
+                alt="instagram icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/twitter.svg"
+                alt="twitter icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/mail.svg"
+                alt="mail icon"
+            /></a>
+          </section>
         </ul>
       </nav>
     </header>
 
-    <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
-      </ul>
-    </nav>
     <section class="pageHeader">
       <h2>Presentkort</h2>
     </section>
@@ -88,12 +107,6 @@
         />
       </p>
     </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
 
     <footer class="footer">
       <div class="footer-sections">
@@ -144,6 +157,6 @@
       </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
