--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
       <nav>
         <ul class="main-nav">
-          <a href="#">
+          <a href="/html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="#">
+          <a href="/html/about.html">
             <li>Om våran biograf</li>
           </a>
           <a href="/html/ticket-info.html">
@@ -165,12 +165,6 @@
         Qui.
       </p>
     </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
 
     <footer class="footer">
       <div class="footer-sections">
