added so directs to seat selection

--- a/Html/booking.html
+++ b/Html/booking.html
@@ -26,24 +26,42 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="/html/openingHours.html"><li>Öppetider & Kontakt</li></a>
           <a href="/html/about.html"> <li>Om våran biograf</li></a>
           <a href="ticket-info.html"> <li>Biljettinfo</li></a>
           <a href="newsletter.html"> <li>Nyheter</li></a>
           <a href="giftCard.html"><li>Köp presentkort</li></a>
+          <section>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/facebook.svg"
+                alt="facebook icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/instagram.svg"
+                alt="instagram icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/twitter.svg"
+                alt="twitter icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/mail.svg"
+                alt="mail icon"
+            /></a>
+          </section>
         </ul>
       </nav>
     </header>
 
-    <nav>
-      <ul>
-        <li>Filmer</li>
-        <li>Salonger</li>
-        <li>Om oss</li>
-        <li>Bistro</li>
-      </ul>
-    </nav>
     <section class="pageHeader">
       <h2>Boka din plats</h2>
     </section>
@@ -53,12 +71,6 @@
         <div id="seatPlanCanvas" class="seatPlanCanvas"></div>
       </div>
     </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
 
     <footer class="footer">
       <div class="footer-sections">
