added script tag

--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -105,6 +105,7 @@
         </li>
       </menu>
     </nav>
+    <script src="/js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
