--- a/html/giftCard.html
+++ b/html/giftCard.html
@@ -187,7 +187,7 @@
         />
       </div>
     </footer>
-
+    <script src="/js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
