--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </footer>
     <script type="text/javascript" src="/src/movies.json"></script>
 
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
     <script src="./js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
