--- a/Html/wholeProgramPage.html
+++ b/Html/wholeProgramPage.html
@@ -1,123 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/main.css" />
     <title>LuleNorthernLightsCinema</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="top-header">
-            <!--  Make a good looking logotype later -->
-            <a href="index.html">
-                <img class="logotype" src="../static/logga.jpg" alt="logotype for the cinema" /></a>
-            <h1>Lule Northern Lights Cinema</h1>
-            <img id="hamburger-icon" src="../static/hamburger-icon.svg" alt="hamburger-icon" />
-        </div>
+      <div class="top-header">
+        <!--  Make a good looking logotype later -->
+        <a href="index.html">
+          <img
+            class="logotype"
+            src="../static/logga.jpg"
+            alt="logotype for the cinema"
+        /></a>
+        <h1>Lule Northern Lights Cinema</h1>
+        <img
+          id="hamburger-icon"
+          src="../static/hamburger-icon.svg"
+          alt="hamburger-icon"
+        />
+      </div>
 
-        <nav>
-            <ul>
-                <a href="#">
-                    <li>Öppetider & Kontakt</li>
-                </a>
-                <a href="#">
-                    <li>Om våran biograf</li>
-                </a>
-                <a href="/html/ticket-info.html">
-                    <li>Biljettinfo</li>
-                </a>
-                <a href="/html/newsletter.html">
-                    <li>Nyheter</li>
-                </a>
-                <a href="/html/giftCard.html">
-                    <li>Köp presentkort</li>
-                </a>
+      <nav>
+        <ul>
+          <a href="#">
+            <li>Öppetider & Kontakt</li>
+          </a>
+          <a href="#">
+            <li>Om våran biograf</li>
+          </a>
+          <a href="/html/ticket-info.html">
+            <li>Biljettinfo</li>
+          </a>
+          <a href="/html/newsletter.html">
+            <li>Nyheter</li>
+          </a>
+          <a href="/html/giftCard.html">
+            <li>Köp presentkort</li>
+          </a>
 
-                <section>
-                    <a href="#">
-                        <img class="social-media-links" src="/static/facebook.svg" alt="facebook icon" /></a>
-                    <a href="#">
-                        <img class="social-media-links" src="/static/instagram.svg" alt="instagram icon" /></a>
-                    <a href="#">
-                        <img class="social-media-links" src="/static/twitter.svg" alt="twitter icon" /></a>
-                    <a href="#">
-                        <img class="social-media-links" src="/static/mail.svg" alt="mail icon" /></a>
-                </section>
-            </ul>
-        </nav>
+          <section>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/facebook.svg"
+                alt="facebook icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/instagram.svg"
+                alt="instagram icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/twitter.svg"
+                alt="twitter icon"
+            /></a>
+            <a href="#">
+              <img
+                class="social-media-links"
+                src="/static/mail.svg"
+                alt="mail icon"
+            /></a>
+          </section>
+        </ul>
+      </nav>
     </header>
 
     <nav class="secNav">
-        <menu class="secNav-menu">
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="rep">Repertoar</button>
-                <div class="secNav-dropdown" id="rep-dropdown"></div>
-            </li>
+      <menu class="secNav-menu">
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="rep">Repertoar</button>
+          <div class="secNav-dropdown" id="rep-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="sal">Salonger</button>
-                <div class="secNav-dropdown" id="sal-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="sal">Salonger</button>
+          <div class="secNav-dropdown" id="sal-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="spec">Specialvisningar</button>
-                <div class="secNav-dropdown" id="spec-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="spec">Specialvisningar</button>
+          <div class="secNav-dropdown" id="spec-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="live">Live på bio</button>
-                <div class="secNav-dropdown" id="live-dropdown"></div>
-            </li>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="live">Live på bio</button>
+          <div class="secNav-dropdown" id="live-dropdown"></div>
+        </li>
 
-            <li class="secNav-menu-item">
-                <button class="dropBtn" id="barBist">Bar & Bistro</button>
-                <div class="secNav-dropdown" id="barBist-dropdown"></div>
-            </li>
-        </menu>
+        <li class="secNav-menu-item">
+          <button class="dropBtn" id="barBist">Bar & Bistro</button>
+          <div class="secNav-dropdown" id="barBist-dropdown"></div>
+        </li>
+      </menu>
     </nav>
 
     <div class="picture-container"></div>
 
     <main>
-        <ul id="ul"></ul>
+      <ul id="ul"></ul>
     </main>
     <aside>
-        <h2>
-            Möjligen att vi lägger någon typ info om något kul eller nåt i aside som på insperations biografen
-        </h2>
+      <h2>
+        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
+        på insperations biografen
+      </h2>
     </aside>
 
     <footer class="footer">
-        <div class="footer-sections">
-            <h3>Lule Northern Lights Cinema</h3>
-            <p>biografgatan 97</p>
-            <p>97231 Luleå</p>
-        </div>
-        <div class="footer-sections">
-            <h3>Kontakta oss</h3>
-            <a href="#">
-                <img class="social-media-links" src="../static/facebook.svg" alt="facebook icon" /></a>
-            <a href="#">
-                <img class="social-media-links" src="../static/instagram.svg" alt="instagram icon" /></a>
-            <a href="#">
-                <img class="social-media-links" src="../static/twitter.svg" alt="twitter icon" /></a>
-            <a href="mailto:">
-                <img class="social-media-links" src="../static/mail.svg" alt="mail icon" /></a>
-            <p>Telefon: 010-7308579</p>
-        </div>
-        <div class="footer-sections">
-            <h3>Samarbete med</h3>
-            <img id="municipality-logo" src="../static/kommun-logo.svg" alt="municipality for our city" />
-            <img id="cinema-collab" src="../static/europa-cinemas.png" alt="cinema collab" />
-        </div>
+      <div class="footer-sections">
+        <h3>Lule Northern Lights Cinema</h3>
+        <p>biografgatan 97</p>
+        <p>97231 Luleå</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Kontakta oss</h3>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="../static/facebook.svg"
+            alt="facebook icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="../static/instagram.svg"
+            alt="instagram icon"
+        /></a>
+        <a href="#">
+          <img
+            class="social-media-links"
+            src="../static/twitter.svg"
+            alt="twitter icon"
+        /></a>
+        <a href="mailto:">
+          <img
+            class="social-media-links"
+            src="../static/mail.svg"
+            alt="mail icon"
+        /></a>
+        <p>Telefon: 010-7308579</p>
+      </div>
+      <div class="footer-sections">
+        <h3>Samarbete med</h3>
+        <img
+          id="municipality-logo"
+          src="../static/kommun-logo.svg"
+          alt="municipality for our city"
+        />
+        <img
+          id="cinema-collab"
+          src="../static/europa-cinemas.png"
+          alt="cinema collab"
+        />
+      </div>
     </footer>
-
+    <script src="/js/script.js"></script>
     <script src="../js/movieRows.js" type="module"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
-</body>
-
+  </body>
 </html>
