--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -172,7 +172,7 @@
         />
       </div>
     </footer>
-
+    <script src="/js/script.js"></script>
     <script src="../js/secNav/secNav.js" type="module"></script>
   </body>
 </html>
