--- a/Html/openingHours.html
+++ b/Html/openingHours.html
@@ -194,5 +194,6 @@
     </footer>
 
     <script src="../js/secNav/secNav.js" type="module"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
