Added ticket to bookingpage

--- a/Html/booking.html
+++ b/Html/booking.html
@@ -73,10 +73,17 @@
 
     </section>
     <main class="content">
-      <div class="screen">Bioduk</div>
-      <div id="seatPlanContainer" class="seatPlanContainer">
-        <div id="seatPlanCanvas" class="seatPlanCanvas"></div>
+      <div class="bookingContent">
+        <div class="screen">Bioduk</div>
+        <div class = ticketSelector>
+          <div class ="ticket">Matinébiljett 100kr</div>
+          <button class="addToCart">Lägg till</button>
+        </div>
+        <div id="seatPlanContainer" class="seatPlanContainer">
+          <div id="seatPlanCanvas" class="seatPlanCanvas">
+        </div>
       </div>
+      
     </main>
     <aside>
       <h2>
@@ -84,6 +91,8 @@
         på insperations biografen
       </h2>
     </aside>
+    </div>
+      
 
     <footer class="footer">
       <div class="footer-sections">
