mailto: on href

--- a/Html/matiné.html
+++ b/Html/matiné.html
@@ -26,7 +26,7 @@
       </div>
 
       <nav>
-        <ul>
+        <ul class="main-nav">
           <a href="openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
@@ -97,12 +97,7 @@
         som visas just nu.
       </p>
     </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
+   
 
     <footer class="footer">
       <div class="footer-sections">
