--- a/Html/wholeProgramPage.html
+++ b/Html/wholeProgramPage.html
@@ -11,15 +11,15 @@
   <body>
     <header class="header">
       <div class="top-header">
-        <!--  Make a good looking logotype later -->
-        <a href="index.html">
+        
+        <a href="/index.html">
           <img
             class="logotype"
-            src="../static/logga.jpg"
+            src="../static/logo-cinema.png"
             alt="logotype for the cinema"
         /></a>
         <h1>Lule Northern Lights Cinema</h1>
-        <img
+        <img onclick="hamburger()"
           id="hamburger-icon"
           src="../static/hamburger-icon.svg"
           alt="hamburger-icon"
@@ -27,11 +27,11 @@
       </div>
 
       <nav>
-        <ul>
-          <a href="#">
+        <ul class="main-nav">
+          <a href="/html/openingHours.html">
             <li>Öppetider & Kontakt</li>
           </a>
-          <a href="#">
+          <a href="/html/about.html">
             <li>Om våran biograf</li>
           </a>
           <a href="/html/ticket-info.html">
@@ -63,7 +63,7 @@
                 src="/static/twitter.svg"
                 alt="twitter icon"
             /></a>
-            <a href="#">
+            <a href="mailto:">
               <img
                 class="social-media-links"
                 src="/static/mail.svg"
@@ -108,12 +108,7 @@
     <main>
       <ul id="ul"></ul>
     </main>
-    <aside>
-      <h2>
-        Möjligen att vi lägger någon typ info om något kul eller nåt i aside som
-        på insperations biografen
-      </h2>
-    </aside>
+   
 
     <footer class="footer">
       <div class="footer-sections">
