--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -62,7 +62,7 @@
                 src="/static/twitter.svg"
                 alt="twitter icon"
             /></a>
-            <a href="#">
+            <a href="mailto:">
               <img
                 class="social-media-links"
                 src="/static/mail.svg"
