--- a/Html/booking.html
+++ b/Html/booking.html
@@ -51,7 +51,7 @@
                 src="/static/twitter.svg"
                 alt="twitter icon"
             /></a>
-            <a href="#">
+            <a href="mailto:">
               <img
                 class="social-media-links"
                 src="/static/mail.svg"
