--- a/Html/about.html
+++ b/Html/about.html
@@ -126,7 +126,11 @@
         </div>
     </footer>
 
-    <script src="../js/secNav/secNav.js" type="module"></script>
+    <script type="module">
+        import renderSecNav from "../js/secNav/secNav.js"
+        renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+      </script>
+      
 </body>
 
 </html>
