--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -154,6 +154,10 @@
       </div>
     </footer>
 
-     <script src="../js/secNav/secNav.js" type="module"></script>
+    <script type="module">
+      import renderSecNav from "../js/secNav/secNav.js"
+      renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+    </script>
+    
   </body>
 </html>
