Add secNav buttons

--- a/html/bistro-menu.html
+++ b/html/bistro-menu.html
@@ -173,6 +173,9 @@
       </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script type="module">
+      import renderSecNav from "../js/secNav/secNav.js"
+      renderSecNav(""); //Pass along emtpy folderDir since the secNav html-files are in the same directory as this one
+    </script>
   </body>
 </html>
